howitt/src/models/point/snapshots/howitt__models__point__delta__tests__speed_delta.snap
---
source: howitt/src/models/point/delta.rs
expression: speed_deltas
---
[
    SpeedDelta(
        0.7992390562546843,
    ),
    SpeedDelta(
        3.1969562214525986,
    ),
]
